<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="dialog_web_view_not_supported">WebView not supported</string>
    <string name="dialog_web_view_not_supported_message">WebViews are not supported by this device.\nInstall a compatible WebView implementation or switch to a supported device.</string>
    <string name="dialog_web_view_outdated">WebView outdated</string>
    <string name="dialog_web_view_outdated_message">The WebView implementation used by your device is outdated.\nPlease update it to a compatible version.</string>
    <string name="dialog_button_check_for_updates">Check for updates</string>
    <string name="dialog_button_close_app">Close app</string>
    <string name="dialog_button_open_settings">Open settings</string>
    <string name="dialog_button_ignore">Ignore</string>
    <string name="toast_reopen_after_change">Please reopen the app after changes are made</string>
    <string name="connect_to_server_title">Connect to Server</string>
    <string name="host_input_hint">Host</string>
    <string name="connection_error_cannot_connect">Connection cannot be established.\nPlease check the hostname and your network connection.</string>
    <plurals name="connection_error_prefix">
        <item quantity="one">Tried %d candidate for input, without success.</item>
        <item quantity="other">Tried %d candidates for input, without success.</item>
    </plurals>
    <string name="connection_error_unable_to_reach_sever">Unable to reach server</string>
    <string name="connection_error_unsupported_version_or_product">Unsupported version or product</string>
    <string name="connect_button_text">Connect</string>
    <string name="choose_server_button_text">Choose server</string>
    <string name="available_servers_title">Available servers</string>
    <string name="button_use_different_server">Use a different server</string>
    <string name="bluetooth_permission_title">Allow Bluetooth access?</string>
    <string name="bluetooth_permission_message">To detect when wireless headphones or speakers are disconnected, the app requires Bluetooth access. On Android, this permission is described as access to nearby devices, and warns that Bluetooth devices can be used to infer the current location. However, the Jellyfin app will never use this permission to detect your location.</string>
    <string name="bluetooth_permission_continue">Continue</string>
    <string name="bluetooth_permission_granted">Bluetooth permission was granted</string>
    <string name="battery_optimizations_message">Please disable battery optimizations for media playback while the screen is off.</string>
    <string name="network_title">Allowed Network Types</string>
    <string name="network_message">Do you want to allow the download to run over mobile data or roaming networks? Charges from your provider may apply. You can change this option later from settings.</string>
    <string name="wifi_only">WiFi Only</string>
    <string name="mobile_data">Mobile Data</string>
    <string name="mobile_data_and_roaming">Mobile Data &amp; Roaming</string>
    <string name="wifi_only_summary">Media will be downloaded over WiFi only.</string>
    <string name="mobile_data_summary">Media will be downloaded over WiFi and mobile networks.</string>
    <string name="mobile_data_and_roaming_summary">Media will be downloaded over WiFi, mobile and roaming networks.</string>
    <string name="downloading">Downloading</string>
    <string name="download_no_storage_permission">Cannot download files without storage permissions</string>
    <string name="media_service_generic_error">An error occurred</string>
    <string name="media_service_item_not_found">Media item could not be found</string>
    <string name="media_service_unknown_page">Unknown page</string>
    <string name="media_service_no_items">No items found</string>
    <string name="media_service_auth_expired">Please open the app on your phone to sign in to your Jellyfin server.</string>
    <string name="media_service_invalid_id">Invalid item ID</string>
    <string name="media_service_car_section_recents">Recently played</string>
    <string name="media_service_car_section_favorites">Favorites</string>
    <string name="media_service_car_section_albums">Albums</string>
    <string name="media_service_car_section_audiobooks">Audiobooks</string>
    <string name="media_service_car_section_artists">Artists</string>
    <string name="media_service_car_section_songs">Songs</string>
    <string name="media_service_car_section_genres">Genres</string>
    <string name="media_service_car_section_playlists">Playlists</string>
    <string name="media_service_car_item_no_title">No title</string>
    <string name="music_notification_channel">Jellyfin Music Player</string>
    <string name="music_notification_channel_description">Used for music playback controls</string>
    <string name="notification_action_previous">Previous</string>
    <string name="notification_action_rewind">Rewind</string>
    <string name="notification_action_play">Play</string>
    <string name="notification_action_pause">Pause</string>
    <string name="notification_action_fast_forward">Fast-forward</string>
    <string name="notification_action_next">Next</string>
    <string name="notification_action_stop">Stop</string>
    <string name="player_error_invalid_play_options">Unable to resolve playback info</string>
    <string name="player_error_network_failure">Unable to load media info from server</string>
    <string name="player_error_unsupported_content">Media cannot be played by this device</string>
    <string name="player_error_unspecific_exception">Something went wrong with the player</string>
    <string name="playback_info_play_method">Play method: %s</string>
    <string name="playback_info_transcoding">Transcoding: %b</string>
    <string name="playback_info_video_streams">Video streams</string>
    <string name="playback_info_audio_streams">Audio streams</string>
    <string name="playback_info_stream_unknown_title">Unknown title</string>
    <string name="playback_info_and_x_more">…and %d more</string>
    <string name="playback_info_more">More info ▸</string>
    <string name="playback_info_less">Less info ▾</string>
    <string name="playback_info_buffered">Buffered %s</string>
    <string name="playback_info_bitrate_limit">Bitrate limit: %s</string>
    <string name="playback_info_title">Playback info</string>
    <string name="playback_info_engine">Engine: %s</string>
    <string name="playback_info_video">Video</string>
    <string name="playback_info_audio">Audio</string>
    <string name="playback_info_subtitle">Subtitle</string>
    <string name="playback_info_off">Off</string>
    <string name="playback_info_section_overview">Overview</string>
    <string name="playback_info_section_media">Media</string>
    <string name="playback_info_label_track">Track</string>
    <string name="playback_info_label_play_method">Play method</string>
    <string name="playback_info_label_engine">Engine</string>
    <string name="playback_info_label_speed">Speed</string>
    <string name="playback_info_label_bitrate_limit">Bitrate limit</string>
    <string name="playback_info_label_container">Container</string>
    <string name="playback_info_label_file_size">File size</string>
    <string name="playback_info_label_total_bitrate">Total bitrate</string>
    <string name="playback_info_label_bitrate">Bitrate</string>
    <string name="playback_info_label_aspect_ratio">Aspect ratio</string>
    <string name="playback_info_label_scan_type">Scan</string>
    <string name="playback_info_label_language">Language</string>
    <string name="playback_info_chip_interlaced">Interlaced</string>
    <string name="playback_info_chip_external">External</string>
    <string name="playback_info_chip_forced">Forced</string>
    <string name="playback_info_chip_default">Default</string>
    <string name="episode_picker_title">Episodes</string>
    <string name="episode_picker_count">%1$d / %2$d</string>
    <string name="close">Close</string>
    <string name="menu_item_none">None</string>
    <string name="menu_item_auto">Auto</string>
    <string name="menu_item_hardware_decoding">Hardware Decoding</string>
    <string name="menu_item_software_decoding">Software Decoding</string>
    <string name="skip_media_segment">Skip</string>
    <string name="external_player_invalid_play_method">Invalid play method.</string>
    <string name="external_player_not_supported_yet">Playback tracking not supported in selected external player yet. Contact developers to try to add support for it.</string>
    <string name="external_player_invalid_player">No valid external player selected. Playback tracking disabled.</string>
    <string name="external_player_unknown_error">Unknown error in external player. Playback tracking disabled.</string>
    <string name="activity_name_settings">Jellyfin Settings</string>
    <string name="pref_category_music_player">Music player</string>
    <string name="pref_music_notification_always_dismissible_title">Dismissible player notification</string>
    <string name="pref_music_notification_always_dismissible_summary_off">The notification can only be dismissed when playback is paused</string>
    <string name="pref_music_notification_always_dismissible_summary_on">The notification can always be dismissed, even when playing media</string>
    <string name="pref_category_video_player">Video player</string>
    <string name="pref_video_player_type_title">Video player type</string>
    <string name="video_player_web">Web player</string>
    <string name="video_player_integrated">Integrated player</string>
    <string name="video_player_mpv">mpv</string>
    <string name="video_player_mpv_description">Based on Mpv, supports more video formats and codecs, and is more integrated into the OS</string>
    <string name="video_player_external">External player</string>
    <string name="video_player_web_description">The default HTML video player from the Web UI</string>
    <string name="video_player_native_description">Based on ExoPlayer, supports more video formats and codecs, and is more integrated into the OS</string>
    <string name="video_player_external_description">External video playback apps like MX Player and VLC</string>
    <string name="pref_exoplayer_start_landscape_video_in_landscape">Start landscape mode videos in landscape orientation</string>
    <string name="pref_exoplayer_allow_brightness_volume_gesture">Brightness and volume gestures</string>
    <string name="pref_exoplayer_remember_brightness">Remember display brightness</string>
    <string name="gesture_overlay_brightness">Brightness %1$d%%</string>
    <string name="gesture_overlay_volume">Volume %1$d%%</string>
    <string name="pref_exoplayer_allow_press_speed_up">Hold to speed up</string>
    <string name="pref_exoplayer_allow_press_speed_up_summary">Touch and hold the screen to temporarily speed up playback</string>
    <string name="pref_exoplayer_allow_background_audio">Background audio</string>
    <string name="pref_exoplayer_allow_background_audio_summary">Allow playing videos in the background with audio-only</string>
    <string name="pref_exoplayer_allow_horizontal_gesture">Horizontal gestures</string>
    <string name="pref_exoplayer_allow_horizontal_gesture_summary">Allow horizontal gesture control for video seeking</string>
    <string name="mpv_config_editor_help">Uses the standard mpv.conf syntax: one option per line as option=value. Lines starting with # are comments and [name] starts a profile.\n\nExamples:\nembeddedfonts=no\ndeband=yes\nsub-scale=1.1\n\nChanges take effect after restarting the app.</string>
    <string name="mpv_config_editor_hint">embeddedfonts=no\nsub-scale=1.1</string>
    <string name="mpv_config_editor_reset">Reset</string>
    <string name="mpv_config_editor_save">Save</string>
</resources>